fixing type wrapping

--- a/public/css/real_estate.css
+++ b/public/css/real_estate.css
@@ -1671,7 +1671,7 @@ label.listinglabel{
     display: inline-block;
     float: left;
     clear: left;
-    width: 200px;
+    width: 250px;
     text-align: right;
     font-size: 1.8rem;
 }
